--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
             background-color: aliceblue;
         }
 
-        @media screen and (max-width: 824px) {
+        @media screen and (max-width: 664px) {
             .container {
                 width: 100%;
+            }
+
+            #header h3 {
+                width: 60%;
+                line-height: 6rem !important;
             }
         }
 
@@ -29,12 +34,13 @@
             justify-content: space-between;
             justify-self: self-start;
             width: 100%;
-            height: 10%;
+            height: 12%;
         }
 
         #header img {
             display: inline-block;
-            width: 14%;
+            width: 25%;
+            height: 100%;
             margin: 0 auto;
             padding: 0;
             align-self: start;
@@ -43,7 +49,7 @@
         #header h3 {
             display: block;
             text-align: center;
-            line-height: 6rem;
+            line-height: 5rem;
             font-size: 1.5rem;
             width: 50%;
             margin: 0 auto;
