--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             }
 
             #header h3 {
-                width: 60%;
-                line-height: 6rem !important;
+                font-size: 1.2rem !important;
+                width: 60% !important;
+                line-height: 3rem !important;
             }
         }
 
