--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
             background-color: aliceblue;
         }
 
-        @media screen and (max-width: 598px) {
+        @media screen and (min-width: 549px) and (max-width: 1200px) {
+            .container {
+                width: 80%;
+            }
+
+            #header h3 {
+                font-size: 1.3rem !important;
+                width: 60% !important;
+                line-height: 5rem !important;
+            }
+        }
+
+        @media screen and (min-width: 400px) and (max-width: 598px) {
             .container {
                 width: 100%;
             }
@@ -25,7 +37,35 @@
             #header h3 {
                 font-size: 1.2rem !important;
                 width: 60% !important;
-                line-height: 3rem !important;
+                line-height: 4rem !important;
+            }
+        }
+
+        @media screen and (min-width: 265px) and (max-width: 400px) {
+            .container {
+                width: 100%;
+            }
+
+            #header h3 {
+                font-size: 1rem !important;
+                width: 60% !important;
+                line-height: 4rem !important;
+            }
+        }
+
+        @media screen and (min-width: 0px) and (max-width: 264px) {
+            .container {
+                width: 100%;
+            }
+
+            #header h3 {
+                font-size: 0.8rem !important;
+                width: 80% !important;
+                line-height: 4rem !important;
+            }
+
+            #header img {
+                width: 20%;
             }
         }
 
