--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 width: 60% !important;
                 line-height: 5rem !important;
             }
+
+            #header img {
+                width: 40%;
+            }
         }
 
         @media screen and (min-width: 400px) and (max-width: 598px) {
@@ -39,6 +43,10 @@
                 width: 60% !important;
                 line-height: 4rem !important;
             }
+
+            #header img {
+                width: 40% !important;
+            }
         }
 
         @media screen and (min-width: 265px) and (max-width: 400px) {
@@ -46,10 +54,18 @@
                 width: 100%;
             }
 
+            #header {
+                height: 80px;
+            }
+
             #header h3 {
                 font-size: 1rem !important;
                 width: 60% !important;
-                line-height: 4rem !important;
+                line-height: 2.2rem !important;
+            }
+
+            #header img {
+                width: 40% !important;
             }
         }
 
@@ -59,13 +75,13 @@
             }
 
             #header h3 {
-                font-size: 0.8rem !important;
-                width: 80% !important;
-                line-height: 5rem !important;
+                font-size: 0.6rem !important;
+                width: 50% !important;
+                line-height: 2.2rem !important;
             }
 
             #header img {
-                width: 20%;
+                width: 50% !important;
             }
         }
 
@@ -80,7 +96,7 @@
 
         #header img {
             display: inline-block;
-            width: 25%;
+            width: 50%;
             height: 100%;
             margin: 0 auto;
             padding: 0;
@@ -149,7 +165,7 @@
 <body>
     <div class="container">
         <div id="header">
-            <img src="logo.jpg" alt="">
+            <img src="logo.png" alt="">
             <h3>Away Pyay (အဝေးပြေး)</h3>
         </div>
         <div class="nav" id="navi"></div>
