--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         ${contact.en_name}
                         <ol>`+
                     contact.phones.map((phone) => {
-                        return `<li><button>${phone}</button></li>`;
+                        return `<li><button onclick="window.open('tel:` + phone + `');">${phone}</button></li>`;
                     }).join(' ') +
 
                     `</ol>
