--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
             line-height: 4rem;
             text-wrap: balance;
         }
+
+        #info {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
     </style>
 </head>
 
@@ -239,8 +245,8 @@
             var bus_line = JSON.parse(decodeURIComponent(data))
             document.getElementById('navi').innerHTML += `<div id="name">${bus_line.en_name}</div>`;
             document.getElementById('list').innerHTML = bus_line.contacts.map((contact) => {
-                return `<li>
-                        ${contact.en_name}
+                return `<li id="info">
+                        <h3>${contact.en_name}<h3>
                         <ol>`+
                     contact.phones.map((phone) => {
                         return `<li><button onclick="window.open('tel:` + phone + `');">${phone}</button></li>`;
